--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@netlify/functions": "^4.2.6",
     "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/vite": "^4.1.13",
     "@vueuse/core": "^13.9.0",
@@ -28,6 +29,7 @@
     "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.5.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
