--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/vite": "^4.1.13",
     "@vueuse/core": "^13.9.0",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
     "reka-ui": "^2.5.0",
@@ -34,11 +36,13 @@
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "vue": "^3.5.18",
+    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
